# Chat-Server

./: .main.hs.swp  Chat-Server.cabal  README.md  main.hs  run.sh
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/flag-cache/: Chat-Server-0.1.0.0-5isnJcty75O2TaQuID8Min  Chat-Server-0.1.0.0-61idaOJYdkKJ1L30dVxvFW  Chat-Server-0.1.0.0-BlWoxjiKVg897hltQwpDDC  Chat-Server-0.1.0.0-DSj67GVPRIr1XSPiQfWXLd  Chat-Server-0.1.0.0-JMryjw0jDghQ7oejoWycD  MonadRandom-0.5.1-6uvIhB08u1RHnyKFfb2cRN  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  contravariant-1.4-29zF0Im431177ovfbHYCGv  distributive-0.5.3-IX4kyVcHAyoH4uFYrsjY1R  either-4.4.1.1-6PiwKYkn4v6B4KO2R2Fu1b  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  free-4.12.4-C2gBQV0m8J42HxqSLTFyVx  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  mmorph-1.0.9-5bASEvmIkr5CpdAYXwPsn0  monad-control-1.0.2.2-1Ci8dYJ8Tb7E3HTcTqOb8l  prelude-extras-0.4.0.3-BhL9U5k7NtGJn1itwIHt2Y  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  profunctors-5.2.1-Ga89Nyw0d7LBEIoX4AZ6gT  random-1.1-9tceXaeYIMZ4JrKq20Egog  semigroupoids-5.2.1-Db8txM8kTsI6Y49CY6g5Jn  semigroups-0.18.3-5xL9BgkWQsCGwo6YahyMCM  split-0.2.3.2-CJl40zTyCIV16Pr60nb7CT  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  transformers-base-0.4.4-GKSs0LKukAL8ymq2naFmrH  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  unordered-containers-0.2.8.0-Bp9XgxjuHxcI4tFehVMDGC  void-0.7.2-4PWwLjXxAER9U3zGpDhf6e
.stack-work/install/x86_64-osx/lts-9.6/8.0.2/pkgdb/: Chat-Server-0.1.0.0-DSj67GVPRIr1XSPiQfWXLd.conf  package.cache
app/: .Main.hs.swn  .Main.hs.swo  .Main.hs.swp  Main.hs
src/: .Client.hs.swp  Chatroom.hs  Client.hs  Utils.hs
test/: test_cases.txt
(+12 files in other folders)
