name:                Chat-Server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/McGizzle/Chat-Server#readme
license:             BSD3
license-file:        LICENSE
author:              Sean McGroarty
maintainer:          https://github.com/McGizzle/Chat-Server#readme
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , network
                     , stm
                     , transformers
                     , mtl
                     , either
                     , split
                     , hashable
                     , async
  default-language:    Haskell2010

executable Chat-Server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , network
                     , stm
                     , transformers
                     , mtl
                     , either
                     , split
                     , hashable
                     , async
                     , Chat-Server
  default-language:    Haskell2010

test-suite Chat-Server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Chat-Server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location:
